--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
     <!-- HEADER -->
     <header>
+      <!-- 헤더 -->
         <div class="inner">
             <a href="/" class="logo">
                 <img src="./images/starbucks_logo.png" alt="Starbucks">
@@ -365,6 +366,7 @@
             </ul>
         </div>
        
+        <!--  배지  -->
         <div class="badges">
             <div class="badge">
                 <img src="./images/badge1.jpg" alt="Badge">
@@ -376,5 +378,21 @@
         </div>
 
     </header>
+
+    <!-- Section -->
+    <section class="visual">
+      <div class="inner">
+
+        <div class="title">
+          <img src="./images/visual_title.png" alt="STARBUCKS DELIGHTFUL START TO THE YEARS" />
+          <a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
+        </div>
+        <img src="./images/visual_cup1.png" alt="new OATMEAL LATTE" class="cup1 image" />
+        <img src="./images/visual_cup1_text.png" alt="오트밀 라떼" class="cup1 text" /> 
+        <img src="./images/visual_cup2.png" alt="new STARBUCKS CARAMEL CRUMBLE MOCHA" class="cup2 image" />
+        <img src="./images/visual_cup2_text.png" alt="스타벅스 카라멜 크럼블 모카" class="cup2 text" />
+        <img src="./images/visual_spoon.png" alt="Spoon" class="spoon"/>
+      </div>
+    </section>
 </body>
 </html>
