Create Toggle Promotion

--- a/index.html
+++ b/index.html
@@ -436,8 +436,10 @@
           </div>
           <div class="inner__right">
             <h2>스타벅스 프로모션</h2>
-            <div class="toggle-promotion"></div>
-            <div class="material-icons">upload</div>
+            <div class="toggle-promotion">
+              <div class="material-icons">upload</div>
+            </div>
+            
           </div>
         </div>
       </div>
