--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
     <!-- 구글 폰트 -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+      <!-- Lodash -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- gsap & scrolltoplugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollToPlugin.min.js" integrity="sha512-pejU3r+QqP9FinPBc7gRHMjcI5MUoiGSyiJNHuFKJOAls/cucff3Z931FwmB6pMRkFxBnq8DGEpmn4xjBqpPpA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -588,6 +592,88 @@
       </div>
     </section>  
 
+    <!-- Awards -->
+    <section class="awards">
+      <div class="inner">
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./images/awards_slide1.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide2.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide3.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide4.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide5.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide6.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide7.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide8.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide9.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+              <img src="./images/awards_slide10.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="swiper-prev">
+          <div class="material-icons">arrow_back</div>
+        </div>
+        <div class="swiper-next">
+          <div class="material-icons">arrow_forward</div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Footer -->
+    <footer>
+      <div class="inner">
+        <ul class="menu">
+          <li><a href="javascipt:void(0)" class="green">개인정보처리방침</a></li>
+          <li><a href="javascipt:void(0)">영상정보처리기기 운영관리 방침</a></li>
+          <li><a href="javascipt:void(0)">홈페이지 이용약관</a></li>
+          <li><a href="javascipt:void(0)">위치정보 이용약관</a></li>
+          <li><a href="javascipt:void(0)">스타벅스 카드 이용약관</a></li>
+          <li><a href="javascipt:void(0)">윤리경영 핫라인</a></li>
+        </ul>
+
+        <div class="btn-group">
+          <a href="javascipt:void(0)" class="btn btn--white">찾아오시는 길</a>
+          <a href="javascipt:void(0)" class="btn btn--white">신규입점제의</a>
+          <a href="javascipt:void(0)" class="btn btn--white">사이트 맵</a>
+        </div>
+        
+        <div class="info">
+          <span>사업자등록번호 201-81-21515</span>
+          <span>(주) 스타벅스 코리아 대표이사 이석구</span>
+          <span>TEL : 02) 3015-1100 / FAX : 02) 3015-1106</span>
+          <span>개인정보 책임자 : 강기원</span>
+        </div>
+
+        <P class="copyright">
+          &copy; <span class="this-year"></span> Starbucks Coffee Company. All Rights Reserved.
+        </P>
+        <img src="./images/starbucks_logo_only_text.png" alt="" class="logo">
+
+      </div>
+    </footer>
+
+    <!-- To-top -->
+    <div id="to-top">
+        <div class="material-icons">arrow_upward</div>
+    </div>
 </body>
 </html>
